# apex_algorithms

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  gda_app.json  pyproject.toml
algorithm_catalog/: advanced_band_combination.json  advancedbandcombi.json  bap_composite.json  biopar.json  cropsar_px.json  eurac_pv_farm_detection.json  fusets_mogpr.json  fusets_mogpr_s1s2.json  gep_bas.json  max_ndvi_composite.json  max_ndvi_composite_description.md  sar_coin.json  sentinel1_stats.json  snap_insar_sentinel1_iw_slc.json  variabilitymap.json  worldcereal.json  worldcereal_crop_extent.json  worldcereal_crop_type.json  (+1 more)
docs/: index.md  (+4 more)
qa/tools/: README.md  pyproject.toml
qa/tools/apex_algorithm_qa_tools/: __init__.py  benchmark_history.py  benchmark_regression.py  benchmark_trends.py  benchmarks.py  common.py  comparison_artifacts.py  github_issue_handler.py  issue_handler.py  pytest_track_metrics.py  pytest_upload_assets.py  records.py  report_performance_regressions.py  scenarios.py  test_failure_handler.py  test_metrics.py  usecases.py
qa/tools/apex_algorithm_qa_tools/benchmarks/: auth.py  common.py  ogc.py  openeo.py
qa/tools/apex_algorithm_qa_tools/benchmarks/runners/: base.py  factory.py  ogc.py  openeo.py
qa/tools/apex_algorithm_qa_tools/metrics/: __init__.py  parquet_metrics.py  performance_baselines.py
qa/tools/apex_algorithm_qa_tools/pytest/: __init__.py  pytest_track_metrics.py  pytest_upload_assets.py
qa/tools/apex_algorithm_qa_tools/scenarios/: __init__.py  common.py  factory.py  ogc.py  openeo.py  scenario.py
(+507 files in other folders)
