[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "apex-algorithm-qa-tools"
description = "Reusable tools APEX algorithms QA"
authors = [
    {name = "Stefaan Lippens", email = "stefaan.lippens@vito.be"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "requests>=2.32.0",
    "jsonschema>=4.0.0",
    "openeo>=0.30.0",
    # TODO: make some of these dependencies optional
    "boto3>=1.34.0",
]
